# base-64-bench-data

./: .gitattributes  LICENSE  README.md  analyse_results.py  dataset_sanitised_large.jsonl  dataset_sanitised_small.jsonl  pyproject.toml
analysis-large/: model_summary.csv
base64bench-large-logs/: 2025-10-03T15-11-36+00-00_base-64-bench_4aXfubnaRxg8Tv4wVzSpEH.eval  2025-10-03T15-11-36+00-00_base-64-bench_4dJfmMBdRF7Zi4cWD2BH9H.eval  2025-10-03T15-11-36+00-00_base-64-bench_BiqT85yEaZoNQeYatQf9yt.eval  2025-10-03T15-11-36+00-00_base-64-bench_EzZBi6hsGcAAH63u9Evqu7.eval  2025-10-03T15-11-36+00-00_base-64-bench_Hp3HgfLEMLtLQWsHfV6t8B.eval  2025-10-03T15-11-36+00-00_base-64-bench_JTvLzgEMmUogG6GcguuJjX.eval  2025-10-03T15-11-36+00-00_base-64-bench_PAfp7WyHnmYSo7voWC5cxy.eval  2025-10-03T15-11-36+00-00_base-64-bench_PPRqK4G3mkNPvWSCxyMbcz.eval  2025-10-03T15-11-36+00-00_base-64-bench_PQiKctHVaCQWMJFNyc4puD.eval  2025-10-03T15-11-36+00-00_base-64-bench_TLLKWHnCdkPDAGYrUGURSf.eval  2025-10-03T15-11-36+00-00_base-64-bench_TZyzLzotMuDt4fkqcSXAJU.eval  2025-10-03T15-11-36+00-00_base-64-bench_YN6mDLKC4Y3CKHhUCD5U7z.eval  2025-10-03T15-11-36+00-00_base-64-bench_Zun2Z8CjGMVzQXCQ6jKgR6.eval  2025-10-03T15-11-36+00-00_base-64-bench_cdaodHkrV6emDLWu55nsrw.eval  2025-10-03T15-11-36+00-00_base-64-bench_eFiq88uwYGwZ7uVKgZHyb5.eval  2025-10-03T15-11-36+00-00_base-64-bench_ebZPogbcayvZcAxawxZLyo.eval  2025-10-03T15-11-36+00-00_base-64-bench_fHr6PQVhe34d786X4jTsNY.eval  2025-10-03T15-11-36+00-00_base-64-bench_gidrcXjLaE5Fow3vvZyzQX.eval  (+2 more)
(+20 files in other folders)
